--- a/apps/frontend/app/globals.css
+++ b/apps/frontend/app/globals.css
@@ -11,7 +11,7 @@ body {
     background-color: #f9f9f9;
     border: 1px solid #ddd;
     border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 10px rgb(0 0 0 / 10%);
 }
 
 h1 {
